[gd_scene load_steps=5 format=3 uid="uid://bapt74v2o7kig"]

[ext_resource type="Script" path="res://src/lobby/player_card/player_card.gd" id="1_aanr4"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wemvv"]
properties/0/path = NodePath(".:input_authority")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_opv0w"]
properties/0/path = NodePath(".:player_name")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_onw1q"]
properties/0/path = NodePath(".:text")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="PlayerCard" type="PanelContainer"]
offset_right = 180.0
offset_bottom = 66.0
size_flags_horizontal = 3
script = ExtResource("1_aanr4")

[node name="AuthoritySynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wemvv")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_opv0w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "player name"
max_length = 20
context_menu_enabled = false

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "player name"
clip_text = true
text_overrun_behavior = 3

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="VBoxContainer/NameLabel"]
replication_config = SubResource("SceneReplicationConfig_onw1q")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ID:"

[node name="IDLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="ParticipationToggle" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 10
text = ">>"

[connection signal="text_changed" from="VBoxContainer/NameLineEdit" to="." method="set_player_name"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ParticipationToggle" to="." method="_on_participation_toggle_pressed"]
